@@ -1,3 +1,6 @@
+2012-09-11  6.7.9-5 Nicolas Robidoux <nicolas.robidoux@gmail...>
+  * sigmoidal-contrast: prevent out of range argument in HDRI.
+
 2012-09-09  6.7.9-5 Cristy  <quetzlzacatenango@image...>
   * The number of default OpenMP threads is 1 (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=23&t=21838).
